testsuite/tests/typing-recovery/bind_existentials.compilers.reference
File "bind_existentials.ml", line 40, characters 48-49:
40 |   | Thunk (type b c) (x, f : b * (b -> c)) -> f x
                                                     ^
Warning 20 [ignored-extra-argument]: this argument will not be used by the function.

File "bind_existentials.ml", line 1:
Error: Multiple errors were encountered
File "bind_existentials.ml", line 20, characters 40-48:
20 | let a = function Dyn (type a b) (a, x : a ty * b) -> ignore (x : b)
                                             ^^^^^^^^
  This pattern matches values of type "a ty * b"
  but a pattern was expected which matches values of type "a ty * a"
  Type "b" is not compatible with type "a"
File "bind_existentials.ml", line 20, characters 61-62:
20 | let a = function Dyn (type a b) (a, x : a ty * b) -> ignore (x : b)
                                                                  ^
  Unbound value "x"
File "bind_existentials.ml", line 29, characters 22-23:
29 |   | Int (type b) (n : a) -> n
                           ^
  This type does not bind all existentials in the constructor: "type b. a"
File "bind_existentials.ml", line 29, characters 28-29:
29 |   | Int (type b) (n : a) -> n
                                 ^
  Unbound value "n"
File "bind_existentials.ml", line 40, characters 29-41:
40 |   | Thunk (type b c) (x, f : b * (b -> c)) -> f x
                                  ^^^^^^^^^^^^
  This pattern matches values of type "b * (b -> c)"
  but a pattern was expected which matches values of type "b * (b -> a)"
  Type "c" is not compatible with type "a"
File "bind_existentials.ml", line 40, characters 46-47:
40 |   | Thunk (type b c) (x, f : b * (b -> c)) -> f x
                                                   ^
  Unbound value "f"
File "bind_existentials.ml", line 40, characters 48-49:
40 |   | Thunk (type b c) (x, f : b * (b -> c)) -> f x
                                                     ^
  Unbound value "x"
File "bind_existentials.ml", line 42, characters 17-19:
42 | let t : string = 10
                      ^^
  This expression has type "int" but an expression was expected of type "string"
